tests/baselines/reference/typeArgInference2WithError.errors.txt
typeArgInference2WithError.ts(7,14): error TS2345: Argument of type 'string' is not assignable to parameter of type 'Item'.


==== typeArgInference2WithError.ts (1 errors) ====
    interface Item {
        name: string;
    }
    
    declare function foo<T extends Item>(x?: T, y?: T): T;
    
    var z7 = foo("abc", 5); // Error
                 ~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'Item'.